--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,18 @@
 # Environment variables
 DEBUG=true
+
+# GitHub
+GITHUB_TOKEN=
+
+# OpenAI
+OPENAI_API_KEY=
+
+# ElevenLabs
+ELEVENLABS_API_KEY=
+
+# Supabase
+SUPABASE_URL=
+SUPABASE_KEY=
+
+# Google Calendar
+GOOGLE_CALENDAR_CREDENTIALS=
