--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,3 +2,8 @@ fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
 pydantic>=2.0.0
 python-dotenv>=1.0.0
+openai
+supabase
+httpx
+google-api-python-client
+elevenlabs
