changed to LiteLLM and fixed syntax bugs + logistic bugs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,8 +4,13 @@ DEBUG=true
 # GitHub
 GITHUB_TOKEN=
 
-# OpenAI
+# OpenAI (fallback)
 OPENAI_API_KEY=
+
+# LiteLLM (primary for analysis)
+LITELLM_BASE_URL=https://litellm.ml.goodnotesbeta.com
+LITELLM_API_KEY=
+LITELLM_MODEL=gpt-4o
 
 # ElevenLabs
 ELEVENLABS_API_KEY=
@@ -13,6 +18,9 @@ ELEVENLABS_API_KEY=
 # Supabase
 SUPABASE_URL=
 SUPABASE_KEY=
+
+# Google API
+GOOGLE_API_KEY=
 
 # Google Calendar
 GOOGLE_CALENDAR_CREDENTIALS=
