--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,7 +8,7 @@ GITHUB_TOKEN=
 OPENAI_API_KEY=
 
 # LiteLLM (primary for analysis)
-LITELLM_BASE_URL=https://litellm.ml.goodnotesbeta.com
+LITELLM_BASE_URL=
 LITELLM_API_KEY=
 LITELLM_MODEL=gpt-4o
 
@@ -24,3 +24,14 @@ GOOGLE_API_KEY=
 
 # Google Calendar
 GOOGLE_CALENDAR_CREDENTIALS=
+
+# Twilio (for CallPilot)
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
+
+# Webhook URL (ngrok URL for local dev)
+WEBHOOK_BASE_URL=http://localhost:8000
+
+# ElevenLabs Agent ID
+ELEVENLABS_AGENT_ID=
