--- a/backend/.env.example
+++ b/backend/.env.example
@@ -58,3 +58,10 @@ TWILIO_PHONE_NUMBER=
 
 # Webhook URL (ngrok for local dev)
 WEBHOOK_BASE_URL=http://localhost:8000
+
+# Webhook URL (ngrok for local dev)
+WEBHOOK_BASE_URL=http://localhost:8000
+
+
+RESEND_API_KEY=
+RESEND_FROM_EMAIL=
